--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,5 @@ services:
       - POSTGRES_DB=mydb
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5432:5432"
