--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
              python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
+      - DB_PORT=5432
       - DB_NAME=mydb
       - DB_USER=postgres
       - DB_PASSWORD=postgres
