add travis ci cache

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,27 @@
-Django>=2.1.3,<2.2.0
-djangorestframework>=3.9.0,<3.10.0
-flake8>=3.6.0,<3.7.0
-psycopg2>=2.7.5,<2.8.0
-gunicorn>=20.0.4,<20.1.0
+asgiref==3.3.1
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+cryptography==3.4.4
+Django==3.1.6
+djangorestframework==3.12.2
+flake8==3.8.4
+gunicorn==20.0.4
+idna==2.10
+importlib-metadata==3.4.0
+mccabe==0.6.1
+psycopg2-binary==2.8.6
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+pyperclip==1.7.0
+python-dotenv==0.15.0
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.25.1
+sqlparse==0.4.1
+travis-encrypt==1.4.0
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+zipp==3.4.0
