--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,4 @@ djangorestframework>=3.9.0,<3.10.0
 flake8>=3.6.0,<3.7.0
 psycopg2>=2.7.5,<2.8.0
 gunicorn>=20.0.4,<20.1.0
-psycopg2-binary==2.8.6
-pyflakes==2.2.0
-travis-encrypt==1.4.0
+psycopg2-binary>=2.8.6,<2.9.0
