--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ notifications:
 
 python:
   - "3.6"
-  -
 services:
   - docker
 
-before_script: pip install docker-compose
+before_script:
+  - pip install docker-compose
 # Run scripts
 script:
   - docker-compose run app sh -c "python manage.py makemigrations"
